--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     build: .
     container_name: iris-history-monitor
     restart: always
+    command: --check-caps false
     ports:
       - 51773
       - ${IRIS_PORT}:52773
